--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Welcome to my first website</h1>
-        <h3>Welcome to shop</h3>
+        <h3>Welcome to my shop</h3>
     </body>
 </html>
