--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Welcome to my first website</h1>
         <h3>Welcome to my shopee</h3>
+        <img src="assets/img/nature.jpg">
     </body>
 </html>
